--- a/package.json
+++ b/package.json
@@ -12,4 +12,8 @@
     "gift": "0.3.0",
     "fs-extra": "0.8.1"
   }
+  "scripts": {
+    "pretest": "./node_modules/punch/bin/punch p",
+    "test": "echo OK"
+  },
 }
